<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:id="@+id/demographicsDocsRootContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    android:layout_margin="0dp"
...
            <FrameLayout
                android:id="@+id/demographicsDocsLicense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/demographicsInsuranceSwitch"
                style="@style/DemographicsDocsLabelStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/demographics_docs_section_margin_top"
                android:checked="false"
                android:layout_marginEnd="15dp"
                android:theme="@style/HaveHealthInsurance"
...
