...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/demographicsOnboardingTab"
                android:src="@drawable/icn_signup_step_1"/>

            <com.carecloud.carepaylibray.customcomponents.CustomViewPager
                android:id="@+id/demographicsViewPager"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white"/>

        </LinearLayout>
...
